fixing padding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 /* Media query for screens below 720px */
 @media (max-width: 720px) {
 	.layout-content {
-		padding: 5px 20px;
+		padding: 10px 20px;
 	}
 }
 
